# Django_Chat

./: pyproject.toml
our_chat/: testing_request_profile.py
our_chat/chat/: urls.py  views.py
our_chat/chat/static/chat/: all_chats.css
our_chat/chat/templates/: my_chats.html
our_chat/our_chat/: asgi.py  settings.py  urls.py  wsgi.py
our_chat/user/: admin.py  backends.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
our_chat/user/migrations/: 0001_initial.py  0002_profile.py  0003_alter_profile_user.py  0004_alter_profile_avatar_friend_profile_friends.py  0005_remove_friend_profile_friend_profile_one_and_more.py  0006_alter_friend_profile_one_alter_friend_profile_two.py
our_chat/user/templates/: add_friend.html  base.html  login_test.html  profile.html  update_profile.html
